# petrodb

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: deploy-cloudflare-pages.yml
docs/adr/: 0003-cloudflare-pages-hosting.md  0004-multi-parquet-table-convention.md  0005-host-parquet-on-huggingface.md  0006-landing-at-sumpalabs-subpath.md
hf/: README.md
parquet/: index.html
parquet/argentina/: README.md  schema.json  schema.md  schema.sql  well_events.parquet  well_operator_history.parquet
parquet/argentina/monthly_production/: _files.json
parquet/force_2020/: README.md  schema.json  schema.md  schema.sql
parquet/force_2020/wells/: _files.json
parquet/petrobras_3w/: LICENSE-3W-DATA.md  README.md  event_types.parquet  schema.json  schema.md  schema.sql
ralph/: afk.sh  once.sh  prompt.md
scripts/analysis/argentina/: production_analysis_local.py  production_analysis_remote.py  production_analysis_remote_imperial.py  utils.py
scripts/analysis/force_2020/: plot_well_logs.py
scripts/deploy/: __init__.py  retarget_data_urls.py
scripts/explore/argentina/: eda_plotter.py  (+5 more)
tests/argentina/: test_date_grid_filler.py  test_events_builder.py  test_interval_collapser.py  test_monthly_production_builder.py  test_operator_history_builder.py  test_schema_doc_generator.py  test_smoke.py  test_transition_detector.py  test_validator.py  test_website_integrator.py  test_wells_builder.py
tests/deploy/: test_retarget_data_urls.py
tests/force_2020/: test_schema_docs.py
tests/petrobras_3w/: conftest.py  test_smoke.py
(+39 files in other folders)
